--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "v-drag": "^3.0.9",
     "vue": "^3.4.29",
+    "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.3.3",
     "vuedraggable": "^4.1.0"
   },
