--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "dependencies": {
     "@mdi/svg": "^7.4.47",
     "pinia": "^2.1.7",
-    "v-drag": "^3.0.9",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.4",
     "vue": "^3.4.29",
     "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.3.3",
-    "vue3-toastify": "^0.2.2",
-    "vuedraggable": "^4.1.0"
+    "vue3-toastify": "^0.2.2"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -38,9 +38,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
-    "postcss": "^8.4.39",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.4",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
